Product page spacing fixes

--- a/src/styles/components/EcommercePage.scss
+++ b/src/styles/components/EcommercePage.scss
@@ -114,6 +114,7 @@
 .button2-mid, .button3, 
 .button3-mid {
   border-radius: 0 !important;
+  padding: 0.1rem 0.8rem;
 }
 
 .button1 {
